# LumaPaletteCSP

./: .gitignore  CLAUDE.md  LICENSE  PROTOCOL.md  README.md  luma_palette_csp.py  package-lock.json  package.json  run.bat
src/: color-models.js  index.html  main.js  oklch.js  slider.js  styles.css  ui.js  wheel.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: color.rs  commands.rs  csp_process.rs  input_hook.rs  lib.rs  main.rs  qr.rs  settings.rs  state.rs  status.rs  tray.rs
src-tauri/src/csp/: connection.rs  crypto.rs  framing.rs  mod.rs  session.rs
