[package]
name = "luma-palette-csp"
version = "0.1.0"
description = "Luma Palette for Clip Studio Paint"
authors = ["Andy Fang"]
edition = "2021"

[lib]
name = "luma_palette_csp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
xcap = "0.0.14"
image = "0.25"
rqrr = "0.7"
sysinfo = "0.32"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
